[workspace.package]
authors = ["Dave Rolsky <autarch@urth.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/houseabsolute/ubi"
version = "0.7.3"

[workspace]
members = ["ubi", "ubi-cli"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.98", default-features = false }
async-trait = { version = "0.1.88", default-features = false }
binstall-tar = { version = "0.4.42", default-features = false }
bzip2 = { version = "0.6.0" }
clap = { version = "4.5.41", default-features = false, features = ["std", "wrap_help"] }
document-features = { version = "0.2" }
# Used in some test code which can't use test_log.
env_logger = { version = "0.11.8", default-features = false }
fern = { version = "0.7.1", default-features = false, features = ["colored"] }
flate2 = { version = "1.1.2", default-features = false }
itertools = { version = "0.14.0" }
lazy-regex = { version = "3.4.1" }
log = { version = "0.4.27", default-features = false }
mockito = { version = "1.7.0", default-features = false }
platforms = { version = "3.6.0" }
regex = { version = "1.11.1", default-features = false }
reqwest = { version = "0.12.22", default-features = false, features = ["gzip", "json"] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.141", default-features = false }
serial_test = { version = "3.2.0", default-features = false }
sevenz-rust2 = { version = "0.17.1", default-features = false, features = ["util"] }
strum = { version = "0.27.2", features = ["derive"] }
tempfile = { version = "3.20.0", default-features = false }
test-case = { version = "3.3.1", default-features = false }
test-log = { version = "0.2.18", default-features = false }
thiserror = { version = "2.0.12" }
tokio = { version = "1.47.0", default-features = false, features = ["macros", "rt"] }
url = { version = "2.5.4", default-features = false, features = ["serde"] }
walkdir = { version = "2.5.0", default-features = false }
which = { version = "8.0.0" }
xz2 = { version = "0.1.7", default-features = false }
# The 4.0.0 version is not compatible with xz2, as they have conflicting requirements on lzma-sys.
#
# This set of features disables all the features that require C compilation, which greatly
# simplifies cross-platform builds.
zip = { version = ">= 3.0.0, < 4.0.0", default-features = false, features = [
    "aes-crypto",
    "bzip2",
    "deflate",
    "deflate64",
    "lzma",
    "zstd",
] }
