[workspace.package]
authors = ["Dave Rolsky <autarch@urth.org>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/houseabsolute/ubi"
version = "0.8.4"

[workspace]
members = ["ubi", "ubi-cli"]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false }
async-trait = { version = "0.1.89", default-features = false }
binstall-tar = { version = "0.4.42", default-features = false }
bzip2 = { version = "0.6.1" }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
document-features = { version = "0.2" }
# Used in some test code which can't use test_log.
env_logger = { version = "0.11.8", default-features = false }
fern = { version = "0.7.1", default-features = false, features = ["colored"] }
flate2 = { version = "1.1.5", default-features = false }
itertools = { version = "0.14.0" }
lazy-regex = { version = "3.5.1" }
log = { version = "0.4.29", default-features = false }
mockito = { version = "1.7.1", default-features = false }
platforms = { version = "3.7.0" }
regex = { version = "1.12.2", default-features = false }
# The 0.13.x series now depends on rustls as the default backend. In turn, the newer rustls depends
# on aws-lc-rs instead of ring, and aws-lc-rs fails to build on NetBSD and PowerPC64 in
# CI. Hopefully, that will be resolved, at which point we can upgrade this dep.
reqwest = { version = "0.12.28", default-features = false, features = ["gzip", "json"] }
rstest = { version = "0.26.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false }
serial_test = { version = "3.3.1", default-features = false }
sevenz-rust2 = { version = "0.20.1", default-features = false, features = ["util"] }
strum = { version = "0.27.2", features = ["derive"] }
tempfile = { version = "3.24.0", default-features = false }
test-log = { version = "0.2.19", default-features = false }
thiserror = { version = "2.0.17" }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt"] }
url = { version = "2.5.8", default-features = false, features = ["serde"] }
walkdir = { version = "2.5.0", default-features = false }
which = { version = "8.0.0" }
xz2 = { version = "0.1.7", default-features = false }
# The 4.0.0 version is not compatible with xz2, as they have conflicting requirements on lzma-sys.
#
# This set of features disables all the features that require C compilation, which greatly
# simplifies cross-platform builds.
zip = { version = ">= 3.0.0, < 4.0.0", default-features = false, features = [
    "aes-crypto",
    "bzip2",
    "deflate",
    "deflate64",
    "lzma",
    "zstd",
] }
zstd = { version = "0.13.3", default-features = false }

[workspace.lints.clippy]
fallible_impl_from = "deny"
wildcard_enum_match_arm = "deny"
unneeded_field_pattern = "deny"
fn_params_excessive_bools = "deny"
