[package]
name = "ubi-cli"
version.workspace = true
authors.workspace = true
description = "The Universal Binary Installer CLI tool"
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
log.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
ubi = { version = "0.3.0", path = "../ubi", features = ["default", "logging"] }

[dev-dependencies]
which.workspace = true

[[bin]]
name = "ubi"
path = "src/main.rs"

[package.metadata.release]
tag-name = "v{{version}}"
