[package]
name = "ubi-cli"
version.workspace = true
authors.workspace = true
description = "The Universal Binary Installer CLI tool"
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
# The default features include things like color output, detailed errors, etc. We want to include
# all of them.
clap = { version = "4.5.45", features = ["default", "wrap_help"] }
log.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
ubi = { version = "0.7.3", path = "../ubi", features = ["default", "logging"] }

[dev-dependencies]
which.workspace = true

[[bin]]
name = "ubi"
path = "src/main.rs"

[package.metadata.release]
tag-name = "v{{version}}"
